Bug 354748 - GHNS "Get New Documentation" broken
Summary: GHNS "Get New Documentation" broken
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: 5.0.0
Assignee: kdevelop-bugs-null
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-11-02 19:36 UTC by Andreas Cord-Landwehr
Modified: 2016-05-14 13:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Cord-Landwehr 2015-11-02 19:36:07 UTC
"Settings -> QtHelp Documentation -> Get New Documentation" leads to a KNewStuff dialog that presents a "Network error. (0)". I also tested it with KDevelop 4.7.1 and get the same behavior, yet with a different error (probably the error messages changes when KNewStuff become a framework?)
After looking a little bit into the problem, I could imagine that this is a problem related to all GHNS urls still using "http" instead of "https" (I think I recall some sysadmin notification from some time ago that everything switched to http?).
Yet, for digging deeper into the problem, probably someone with access to  https://collect.kde.org/kdevelop-qthelp/providers.xml is needed.

Reproducible: Always

Steps to Reproduce:
see above
Comment 1 Kevin Funk 2015-11-02 19:48:50 UTC
Phew, no idea.

I just switched to https://collect.kde.org/kdevelop-qthelp/providers.xml in the qthelp plugin, however, still getting the network error.

Maybe Gregor knows more? He's been the last person working on kns3...
Comment 2 Gregor Mi 2015-11-02 20:19:13 UTC
First, I can confirm, with kdevelop 4.7.1 I get the message "Unknown Open Collaboration Service API error. (0)".

Secondly, sorry, I was working on KMoreTools which is different area of KNewStuff.
Comment 3 Andreas Cord-Landwehr 2016-05-14 13:55:32 UTC
Git commit d6118e0d79fc5b1abda3e2d1e506bb7bde160747 by Andreas Cord-Landwehr.
Committed on 14/05/2016 at 13:52.
Pushed by cordlandwehr into branch 'master'.

Fix redirection of absolut Urls

Redirection only worked with relative urls. Yet, e.g. the http to https
redirection on KDE servers uses absolute paths, which resulted in an
empty url, since the reply attribute was not relative.

This patch adds a case distinction for redirecting absolute and relative
paths.
REVIEW: 127900

M  +7    -2    src/atticabasejob.cpp

http://commits.kde.org/attica/d6118e0d79fc5b1abda3e2d1e506bb7bde160747