Fix redirection of absolut Urls

Redirection only worked with relative urls. Yet, e.g. the http to https
redirection on KDE servers uses absolute paths, which resulted in an
empty url, since the reply attribute was not relative.

This patch adds a case distinction for redirecting absolute and relative
paths.

BUG: 354748
REVIEW: 127900